--- a/utilities/vis2screen/configure.ac
+++ b/utilities/vis2screen/configure.ac
@@ -1,9 +1,7 @@
-AC_INIT(printDiFX.cpp)
-
-PACKAGE=printDiFX
-VERSION=1.0
-
-AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
+AC_INIT([printDiFX], [1.0])
+AC_CONFIG_SRCDIR(printDiFX.cpp)
+AM_INIT_AUTOMAKE
+AC_CONFIG_FILES([Makefile])
 
 FXCORR_REQUIRED_VERSION=2.4
 PKG_CHECK_MODULES(FXCORR, fxcorr >= $FXCORR_REQUIRED_VERSION)
@@ -17,4 +15,4 @@ AC_SUBST(DIFXMESSAGE_LIBS)
 
 AC_PROG_CXX
 
-AC_OUTPUT(Makefile)
+AC_OUTPUT
