--- a/libraries/python/configure.ac
+++ b/libraries/python/configure.ac
@@ -1,15 +1,15 @@
 AC_INIT([python], [1.3])
-
+AC_CONFIG_FILES([
+  Makefile
+  difxdb/Makefile
+  difxfile/Makefile
+  difxutil/Makefile
+  tkinter/Makefile
+  parseDiFX/Makefile
+  difxplot/Makefile
+])
 AM_INIT_AUTOMAKE([foreign])
 
 AC_SUBST([pylibdir], [$libdir/python])
 
-AC_OUTPUT([ \
-	Makefile \
-	difxdb/Makefile \
-	difxfile/Makefile \
-	difxutil/Makefile \
-	tkinter/Makefile \
-	parseDiFX/Makefile \
-	difxplot/Makefile \
-])
+AC_OUTPUT
