--- a/libraries/mark5access/configure.ac
+++ b/libraries/mark5access/configure.ac
@@ -65,6 +65,8 @@ if test -n "$PYTHON" -a "x$REQUESTED_PYTHON_CTYPES" = "xyes"; then
 fi
 AM_CONDITIONAL([ENABLE_PYTHON_CTYPES], [test -n "$PYTHON" -a "x$REQUESTED_PYTHON_CTYPES" = "xyes" -a -n "$GOT_PYTHON_CTYPES"])
 
+
+export PKG_CONFIG_PATH+=":../codifio"
 PKG_CHECK_MODULES([CODIFIO], [codifio >= 0.2], [HAVE_CODIFIO=true], [HAVE_CODIFIO=false])
 AM_CONDITIONAL(USE_CODIFIO, $HAVE_CODIFIO)
 if test ${HAVE_CODIFIO} = true; then
@@ -73,6 +75,7 @@ if test ${HAVE_CODIFIO} = true; then
   LIBS="${LIBS} ${CODIFIO_LIBS}"
 fi
 
+export PKG_CONFIG_PATH+=":../mark6sg"
 PKG_CHECK_MODULES([MARK6SG], [mark6sg >= 2.0.2], [HAVE_MARK6SG=true], [HAVE_MARK6SG=false])
 AM_CONDITIONAL(USE_MARK6SG, $HAVE_MARK6SG)
 if test $HAVE_MARK6SG = true; then
