Adding relative path for pkg-config files required for libraries/mark6meta

--- a/libraries/mark6meta/configure.ac
+++ b/libraries/mark6meta/configure.ac
@@ -32,6 +32,7 @@ AM_SANITY_CHECK
 
 AC_LANG(C++)
 
+export PKG_CONFIG_PATH+=":../difxmessage"
 PKG_CHECK_MODULES(DIFXMESSAGE, [difxmessage >= 2.8.0])
 #PKG_CHECK_MODULES(LIBUDEV, [libudev >= 1.0.0], [], [AC_MSG_ERROR(libudev not found)])
 AC_CHECK_LIB(udev, udev_ref)
