--- a/applications/espresso/configure.ac
+++ b/applications/espresso/configure.ac
@@ -1,9 +1,8 @@
 AC_INIT([espresso], [3.0])
 
 AM_INIT_AUTOMAKE([foreign])
-
+AC_CONFIG_FILES([Makefile])
 AC_SUBST([pylibdir], [$libdir/python])
 
-AC_OUTPUT([ \
-	Makefile
-])
+AC_OUTPUT
+
