Modernized configure.ac for realtimevdif

--- a/utilities/realtimevdif/configure.ac
+++ b/utilities/realtimevdif/configure.ac
@@ -1,7 +1,5 @@
 AC_INIT([vdifudp_realtimeutils], [1.1], [Jan Wagner <jwagner@kasi.re.kr>])
+AC_CONFIG_FILES([Makefile])
 AC_PROG_CC
 AM_INIT_AUTOMAKE
-AC_OUTPUT([ \
-        Makefile \
-])
-
+AC_OUTPUT
