Simplified configure.ac and Makefile

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,91 +1,3 @@
-SUBDIRS =
-
-if ENABLE_DIFXIO
-  SUBDIRS += libraries/difxio
-endif
-
-if ENABLE_DIFXIO
-  SUBDIRS += libraries/difxio
-endif
-if ENABLE_CODIFIO
-  SUBDIRS += libraries/codifio
-endif
-if ENABLE_DIFXMESSAGE
-  SUBDIRS += libraries/difxmessage
-endif
-if ENABLE_DIRLIST
-  SUBDIRS += libraries/dirlist
-endif
-if ENABLE_MARK6SG
-  SUBDIRS += libraries/mark6sg
-endif
-if ENABLE_MARK5ACCESS
-  SUBDIRS += libraries/mark5access
-endif
-if ENABLE_MARK6META
-  SUBDIRS += libraries/mark6meta
-endif
-if ENABLE_PYTHON
-  SUBDIRS += libraries/python
-endif
-if ENABLE_VDIFIO
-  SUBDIRS += libraries/vdifio
-endif
-
-if ENABLE_CALCSERVER
-  SUBDIRS += applications/calcserver
-endif
-if ENABLE_DIFXCALC11
-  SUBDIRS += applications/difxcalc11
-endif
-if ENABLE_DIFX2FITS
-  SUBDIRS += applications/difx2fits
-endif
-if ENABLE_VEX2DIFX
-  SUBDIRS += applications/vex2difx
-endif
-if ENABLE_DIFX2MARK4
-  SUBDIRS += applications/difx2mark4
-endif
-if ENABLE_DIFXFILTERBANK
-  SUBDIRS += applications/difxfilterbank
-endif
-if ENABLE_HOPS
-  SUBDIRS += applications/hops
-endif
-if ENABLE_M6SUPPORT
-  SUBDIRS += applications/m6support
-endif
-if ENABLE_POLCONVERT
-  SUBDIRS += applications/polconvert
-endif
-if ENABLE_GUISERVER
-  SUBDIRS += applications/guiserver
-endif
-if ENABLE_MK5DAEMON
-  SUBDIRS += applications/mk5daemon
-endif
-if ENABLE_DIFX_MONITOR
-  SUBDIRS += applications/difx_monitor
-endif
-if ENABLE_DATASIM
-  SUBDIRS += applications/datasim
-endif
-if ENABLE_ESPRESSO
-  SUBDIRS += applications/espresso
-endif
-
-if ENABLE_CALCIF2
-  SUBDIRS += utilities/calcif2
-endif
-if ENABLE_DIFX2PROFILE
-  SUBDIRS += utilities/pulsar/difx2profile
-endif
-if ENABLE_MISC
-  SUBDIRS += utilities/misc
-endif
-if ENABLE_VIS2SCREEN
-  SUBDIRS += utilities/vis2screen
-endif
+SUBDIRS = @subdirs@
 
 
