--- a/configure.ac
+++ b/configure.ac
@@ -344,64 +344,38 @@ AC_SUBST([ipp_libs])
 
 dnl libs
 AS_IF([test "x$enable_difxio" == xyes], [AC_CONFIG_SUBDIRS([libraries/difxio])])
-AM_CONDITIONAL([ENABLE_DIFXIO], [test "x$enable_difxio" = xyes])
 AS_IF([test "x$enable_codifio" == xyes], [AC_CONFIG_SUBDIRS([libraries/codifio])])
-AM_CONDITIONAL([ENABLE_CODIFIO], [test "x$enable_codifio" = xyes])
 AS_IF([test "x$enable_difxmessage" == xyes], [AC_CONFIG_SUBDIRS([libraries/difxmessage])])
-AM_CONDITIONAL([ENABLE_DIFXMESSAGE], [test "x$enable_difxmessage" = xyes])
 AS_IF([test "x$enable_dirlist" == xyes], [AC_CONFIG_SUBDIRS([libraries/dirlist])])
-AM_CONDITIONAL([ENABLE_DIRLIST], [test "x$enable_dirlist" = xyes])
 AS_IF([test "x$enable_mark6sg" == xyes], [AC_CONFIG_SUBDIRS([libraries/mark6sg])])
-AM_CONDITIONAL([ENABLE_MARK6SG], [test "x$enable_mark6sg" = xyes])
 AS_IF([test "x$enable_mark5access" == xyes], [AC_CONFIG_SUBDIRS([libraries/mark5access])])
-AM_CONDITIONAL([ENABLE_MARK5ACCESS], [test "x$enable_mark5access" = xyes])
 AS_IF([test "x$enable_mark6meta" == xyes], [AC_CONFIG_SUBDIRS([libraries/mark6meta])])
-AM_CONDITIONAL([ENABLE_MARK6META], [test "x$enable_mark6meta" = xyes])
 AS_IF([test "x$enable_python" == xyes], [AC_CONFIG_SUBDIRS([libraries/python])])
-AM_CONDITIONAL([ENABLE_PYTHON], [test "x$enable_python" = xyes])
 AS_IF([test "x$enable_vdifio" == xyes], [AC_CONFIG_SUBDIRS([libraries/vdifio])])
-AM_CONDITIONAL([ENABLE_VDIFIO], [test "x$enable_vdifio" = xyes])
+
+AS_IF([test "x$enable_mpifxcorr" == xyes], [AC_CONFIG_SUBDIRS([mpifxcorr])])
 
 dnl applications
 AS_IF([test "x$enable_calcserver" == xyes], [AC_CONFIG_SUBDIRS([applications/calcserver])])
-AM_CONDITIONAL([ENABLE_CALCSERVER], [test "x$enable_calcserver" = xyes])
 AS_IF([test "x$enable_difxcalc11" == xyes], [AC_CONFIG_SUBDIRS([applications/difxcalc11])])
-AM_CONDITIONAL([ENABLE_DIFXCALC11], [test "x$enable_difxcalc11" = xyes])
 AS_IF([test "x$enable_difx2fits" == xyes], [AC_CONFIG_SUBDIRS([applications/difx2fits])])
-AM_CONDITIONAL([ENABLE_DIFX2FITS], [test "x$enable_difx2fits" = xyes])
 AS_IF([test "x$enable_vex2difx" == xyes], [AC_CONFIG_SUBDIRS([applications/vex2difx])])
-AM_CONDITIONAL([ENABLE_VEX2DIFX], [test "x$enable_VEX2DIFX" = xyes])
 AS_IF([test "x$enable_difx2mark4" == xyes], [AC_CONFIG_SUBDIRS([applications/difx2mark4])])
-AM_CONDITIONAL([ENABLE_DIFX2MARK4], [test "x$enable_difx2mark4" = xyes])
 AS_IF([test "x$enable_difxfilterbank" == xyes], [AC_CONFIG_SUBDIRS([applications/difxfilterbank])])
-AM_CONDITIONAL([ENABLE_DIFXFILTERBANK], [test "x$enable_difxfilterbank" = xyes])
 AS_IF([test "x$enable_hops" == xyes], [AC_CONFIG_SUBDIRS([applications/hops])])
-AM_CONDITIONAL([ENABLE_HOPS], [test "x$enable_hops" = xyes])
 AS_IF([test "x$enable_m6support" == xyes], [AC_CONFIG_SUBDIRS([applications/m6support])])
-AM_CONDITIONAL([ENABLE_M6SUPPORT], [test "x$enable_m6support" = xyes])
 AS_IF([test "x$enable_polconvert" == xyes], [AC_CONFIG_SUBDIRS([applications/polconvert])])
-AM_CONDITIONAL([ENABLE_POLCONVERT], [test "x$enable_polconvert" = xyes])
 AS_IF([test "x$enable_guiServer" == xyes], [AC_CONFIG_SUBDIRS([applications/guiServer])])
-AM_CONDITIONAL([ENABLE_GUISERVER], [test "x$enable_guiserver" = xyes])
 AS_IF([test "x$enable_mk5daemon" == xyes], [AC_CONFIG_SUBDIRS([applications/mk5daemon])])
-AM_CONDITIONAL([ENABLE_MK5DAEMON], [test "x$enable_mk5daemon" = xyes])
 AS_IF([test "x$enable_difx_monitor" == xyes], [AC_CONFIG_SUBDIRS([applications/difx_monitor])])
-AM_CONDITIONAL([ENABLE_DIFX_MONITOR], [test "x$enable_difxmonitor" = xyes])
 AS_IF([test "x$enable_datasim" == xyes], [AC_CONFIG_SUBDIRS([applications/datasim])])
-AM_CONDITIONAL([ENABLE_DATASIM], [test "x$enable_datasim" = xyes])
 AS_IF([test "x$enable_espresso" == xyes], [AC_CONFIG_SUBDIRS([applications/expresso])])
-AM_CONDITIONAL([ENABLE_ESPRESSO], [test "x$enable_espresso" = xyes])
-
 
 dnl utils
 AS_IF([test "x$enable_calcif2" == xyes], [AC_CONFIG_SUBDIRS([utilities/calcif2])])
-AM_CONDITIONAL([ENABLE_CALCIF2], [test "x$enable_calcif2" = xyes])
 AS_IF([test "x$enable_difx2profile" == xyes], [AC_CONFIG_SUBDIRS([utilities/pulsar/difx2profile])])
-AM_CONDITIONAL([ENABLE_DIFX2PROFILE], [test "x$enable_difx2profile" = xyes])
 AS_IF([test "x$enable_misc" == xyes], [AC_CONFIG_SUBDIRS([utilities/misc])])
-AM_CONDITIONAL([ENABLE_MISC], [test "x$enable_misc" = xyes])
 AS_IF([test "x$enable_vis2screen" == xyes], [AC_CONFIG_SUBDIRS([utilities/vis2screen])])
-AM_CONDITIONAL([ENABLE_VIS2SCREEN], [test "x$enable_vis2screen" = xyes])
 
 AC_SUBST([subdirs])
 
