Fixed typo in specifying vdifPhase_CFLAGS when using FFTW3

--- a/libraries/vdifio/utils/Makefile.am
+++ b/libraries/vdifio/utils/Makefile.am
@@ -47,7 +47,7 @@ endif
 
 if WITH_FFTW
   bin_PROGRAMS += vdifPhase
-  vdifPhase_CFLAGS = $(FFTW_CFLAGS) $(INCLUDES)
+  vdifPhase_CFLAGS = $(FFTW3_CFLAGS) $(INCLUDES)
   vdifPhase_LDADD = $(FFTW3_LIBS) $(LDADD)
 endif
 
